--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@faker-js/faker": "^8.0.2",
     "express": "^4.18.2",
     "luxon": "^3.3.0",
     "mongoose": "^7.3.4"
